chore: update build.xml